# Alpha-Terminal

./: .gitignore  Makefile  README.md  README_LOCAL.md
backend/: Dockerfile  README..txt  __init__.py  gitignore  main.py  pyproject.toml  requirements.txt
backend/kaitiaki/kitenga/: Kitenga.py  kitengas_api.py
backend/kaitiaki/rongohia/: rongohia_api.py
backend/kaitiaki/whiro/: whiro_api.py
backend/models/: base_model.py
backend/services/: api_service.py
backend/supabase/: supabase_table.sql
backend/supabase/functions/edge/: .env
backend/supabase/functions/memory_log/: index.ts  tsconfig.json
backend/utils/: den_memory_loop.py  ocr.py
